<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_span="4"
        android:gravity="right"
        android:paddingRight="50sp"
        android:layout_alignParentTop="true"
        android:paddingTop="60dp"
        android:text="0"
        android:textColor="@color/colorText"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">
            <TableRow>
                <Button
                    android:id="@+id/btn_AC"
                    android:layout_height="75dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/changebackground_2"
                    android:text="@string/ac"
                    android:textColor="@color/colorText"
                    android:textSize="30dp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_C"
                    android:layout_height="75dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/changebackground_2"
                    android:text="@string/c"
                    android:textColor="@color/colorText"
                    android:textSize="30dp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_left"
                    android:layout_height="75dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/changebackground_2"
                    android:text="@string/mo_ngoac"
                    android:textColor="@color/colorText"
                    android:textSize="30dp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_right"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground_2"
                    android:text="@string/dong_ngoac"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />
            </TableRow>
            <TableRow>

                <Button
                    android:id="@+id/btn_7"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_7"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_8"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_8"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_9"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_9"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_div"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground_2"
                    android:text="@string/div"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_4"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_4"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_5"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_5"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_6"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_6"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_mul"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground_2"
                    android:text="@string/mul"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

            </TableRow>
            <TableRow>

                <Button
                    android:id="@+id/btn_1"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_1"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_2"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_3"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_3"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_sub"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground_2"
                    android:text="@string/sub"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/btn_0"

                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground"
                    android:text="@string/_0"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />
                <Button
                    android:id="@+id/btn_result"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:layout_span="2"
                    android:background="@drawable/changebackground"
                    android:text="@string/result"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />
                <Button
                    android:id="@+id/btn_sum"
                    android:layout_height="75dp"
                    android:layout_margin="2sp"
                    android:background="@drawable/changebackground_2"
                    android:text="@string/sum"
                    android:textColor="@color/colorText"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

</LinearLayout>
</RelativeLayout>

